History:

<see Git checkin messages for history>

devel   201y/mm/dd
      - Python 2.6 to 3.5 ready
      - code purgation and review, more debug informations
      - delete --debug argument
      - MSS: few optimizations into save_img()
      - MSSMac: remove rotation from informations returned by enum_display_monitors()
      - MSSLinux: fix object has no attribute 'display' into __del__
      - MSSLinux: use of XDestroyImage() instead of XFree()
      - MSSLinux: few optimizations into get_pixels()
      - MSSWindows: huge optimization of get_pixels()

0.1.1   2015/04/10
      - little code review
      - add doc/TESTING
      - remove Bonus section from README.rst
      - tests: remove test-linux binary
      - MSSLinux: fix monitor count

0.1.0   2015/04/10
      - fix code with YAPF tool
      - better tests and examples
      - MSSLinux: fully functional using Xrandr library
      - MSSLinux: code purgation (no more XML files to parse)

0.0.8   2015/02/04
      - fix #3: filename's dir is not used when saving
      - fix #4: robustness to MSSWindows.get_pixels
      - fix "E713 test for membership should be 'not in'"
      - raise an exception for unimplemented methods
      - new contributors: sergey-vin, Alexander 'thehesiod' Mohr

0.0.7   2014/03/20
      - fix path where screenshots are saved

0.0.6   2014/03/19
      - review module structure to fit the "Code Like a Pythonista: Idiomatic Python"
      - refactoring of all enum_display_monitors() methods
      - MSSLinux: add XFCE4 support
      - MSSImage: moved into a MSS:save_img() method
      - PEP8 compliant
      - Python 3.4 ready
      - fix misspellings using 'codespell' tool
      - possibility to append '--debug' to the command line
      - better way to manage output filenames (callback)
      - several fixes here and there, code refactoring
      - new contributor: Sam from sametmax.com

0.0.5   2013/11/01
      - MSSWindows: few optimizations into _arrange()